--- a/src/main/resources/dbschema/liquibase-prod.properties
+++ b/src/main/resources/dbschema/liquibase-prod.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/resources/dbschema/master.xml
 driver = org.postgresql.Driver
-url = jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_NAME}
-username=${DB_USER}
-password=${DB_PASSWORD}
+url = jdbc:postgresql://localhost:5432/mgmdb
+username=mgm
+password=mgm123
 dropFirst=false
 promptOnNonLocalDatabase=false
